# aws-monster-chaos-game

./: .gitignore  LICENSE  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  webapp-config.json
assets/adafruit/: code.py
doc/: CDK.md  PYPORTAL.md
lib/: app-stack.ts  aws-chaos-game-app-stack.ts  aws-chaos-game-stack.ts  chaos-stack.ts  iot-stack.ts
lib/app/: aws-chaos-game-webapp-stack.ts  dynamodb.ts  network.ts  webapp-image.ts  webapp.ts
lib/chaos/: cloudwatch.ts  dynamodb.ts  experiment.ts  fis.ts  iam.ts  lambda.ts  state-machine.ts
lib/iot/: iot-core.ts  iot-rule.ts  iot.ts  step-function-action.ts
lib/webapp/: webapp-image.ts  webapp.ts
resources/adafruit/: code.py  secrets.py
resources/lambdas/check_experiment/: main.py
resources/lambdas/check_experiment/layer/: pyproject.toml
resources/lambdas/cleanup_ecr/: main.py
resources/lambdas/cleanup_ecr/lib/: cfnresponse.py
resources/lambdas/query_app/: main.py
resources/lambdas/query_app/layer/: pyproject.toml
resources/lambdas/trigger_experiment/: main.py
resources/lambdas/trigger_experiment/layer/: pyproject.toml
resources/services/app/: .dockerignore  Dockerfile  index.html  index2.html  package-lock.json  package.json  server.js
resources/services/app/css/: style.css
resources/services/app/views/pages/: index.ejs
resources/services/app/views/partials/: footer.ejs  head.ejs
resources/services/nginx/: Dockerfile  nginx.conf
resources/services/xray/: Dockerfile
test/: aws-chaos-game.test.ts
