[tool.poetry]
name = "trigger_experiment"
version = "0.1.0"
description = ""
authors = ["Matthieu Lienart <matthieu.lienart@amanox.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"